# latest-python-versions

./: .pre-commit-config.yaml  Dockerfile  LICENSE.txt  README.md  action.yml  eol.json  main.py  main_tests.py  pyproject.toml  setup.cfg
.github/workflows/: tag_releases.yml  test.yml  test_workflow.yml
caching/: action.yml
test/: test_main.py
