[tool.poetry]
name = "latest-python-version"
version = "1.0.0"  # This version doesn't matter - only using Poetry for dependencies
description = "Fetches latest Python versions"
authors = ["Sondre Lillebø Gundersen <sondrelg@live.no>"]
license = "BSD-3"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pre-commit = "*"
responses = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 120

[tool.coverage.run]
omit = []
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    'if TYPE_CHECKING:',
    "if __name__ == '__main__':",
]
